--- a/.gitignore
+++ b/.gitignore
@@ -6,31 +6,39 @@ __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+*.sqlite3.backup*
 
 # Environment variables
 .env
 *.env
+.env.local
+.env.production
 
 # Virtual environment
 venv/
 env/
 ENV/
+.venv/
 
-# Media files (opcional - se quiser versionar, remova esta linha)
+# Media files (uploads de usuários)
 media/
+!media/.gitkeep
 
 # Static files collected
 staticfiles/
+!static/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*.sublime-*
 
 # OS
 .DS_Store
 Thumbs.db
+.directory
 
 # Python
 *.py[cod]
@@ -65,3 +73,25 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+
+# Backup files
+*_backup/
+*.backup
+*.bak
+
+# Logs
+django.log
+*.log
+
+# Documentation builds
+docs/_build/
+
+# Node.js (se usar npm/yarn)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+*.tmp
+*.temp
